[WIP] - Character panel styling

--- a/src/RuneGlossary.Client.WASM/Components/Rune.razor
+++ b/src/RuneGlossary.Client.WASM/Components/Rune.razor
@@ -2,7 +2,7 @@
 
 <div class="tooltip-wrapper">
     <div class="tooltip-content">
-        <span class="name">@Model.Name</span>
+        <span class="name tooltip">@Model.Name</span>
         <span class="statistic">Helmet: @Model.InHelmet</span>
         <span class="statistic">Body Armor: @Model.InBodyArmor</span>
         <span class="statistic">Shield: @Model.InShield</span>
@@ -10,7 +10,7 @@
     </div>
     <div>
         <img src="assets/runes/@(Model.Name.ToLower()).webp"/>
-        <span>@Model.Name</span>
+        <span class="name">@Model.Name</span>
     </div>
 </div>
 
