--- a/src/RuneGlossary.Client.WASM/Components/Rune.razor.css
+++ b/src/RuneGlossary.Client.WASM/Components/Rune.razor.css
@@ -48,6 +48,10 @@ div.tooltip-content {
 }
 
 span.name {
+    color: var(--color-text-rune);
+}
+
+span.tooltip {
     font-weight: bold;
 
     margin-bottom: 16px;
