--- a/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor
+++ b/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor
@@ -35,7 +35,7 @@
                         <span class="label" style="grid-area: label-name">Name:</span>
                         <span class="value" style="grid-area: value-name">@Character?.Name</span>
                         <span class="label" style="grid-area: label-level">Level:</span>
-                        <InputNumber class="value" style="grid-area: value-level" @bind-Value="Character.Level" />
+                        <InputNumber style="grid-area: value-level; border-image: var(--border-input); border-image-width: auto; border-style: solid; background-color: transparent; color: var(--color-text)" @bind-Value="Character.Level" />
                     </div>
                 </div>
                 <div class="rune-list">
