--- a/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
+++ b/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
@@ -1,89 +1,66 @@
 ﻿div.panel {
-    background-color: lightsteelblue;
-
-    color: white;
-}
-
-div.filter {
-    grid-area: filter;
-
-    background-color: deepskyblue;
-
-    border-color: darkblue;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 5px;
-
-    justify-content: center;
-    align-content: center;
-
-    display: grid;
-
-    grid-template-areas: 
-        'item-types static'
-        'button-row button-row';
-    grid-template-columns: min-content max-content;
-    grid-row-gap: 4px;
-
-    padding: 4px;
-
-    height: fit-content;
+    border-image: var(--border-top);
+    border-image-width: auto;
+    border-image-slice: 30%;
+    border-style: none;
 }
 
 div.main {
     display: grid;
-
     grid-template-areas:
         'character filter'
         'character result';
     grid-template-columns: 25% auto;
     grid-template-rows: max-content 1fr;
-    grid-column-gap: 4px;
-    grid-row-gap: 4px;
-
     align-content: center;
-
     height: 100%;
 }
 
-div.result {
-    grid-area: result;
-
-    background-color: deepskyblue;
-
-    border-color: darkblue;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 5px;
-
-    display: flex;
-    flex-flow: column;
-
-    max-height: 807px;
-
-    overflow: auto;
-}
-
 div.character {
-    background-color: deepskyblue;
-
-    border-color: darkblue;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 5px;
-
+    background-color: var(--color-background);
     display: grid;
-
-    grid-template: 
+    grid-template:
         'data'
         'rune-list'
         'button-row';
     grid-template-rows: auto min-content min-content;
-    grid-row-gap: 4px;
-
+    grid-row-gap: var(--size-single);
     grid-area: character;
-
     height: fit-content;
+    padding: var(--size-double);
+    border-style: solid;
+}
+
+div.filter {
+    grid-area: filter;
+    background-color: var(--color-background);
+    border-color: darkblue;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    justify-content: center;
+    align-content: center;
+    display: grid;
+    grid-template-areas:
+        'item-types static'
+        'button-row button-row';
+    grid-template-columns: min-content max-content;
+    grid-row-gap: 4px;
+    padding: 4px;
+    height: fit-content;
+}
+
+div.result {
+    grid-area: result;
+    background-color: var(--color-background);
+    border-color: darkblue;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    display: flex;
+    flex-flow: column;
+    max-height: 807px;
+    overflow: auto;
 }
 
 div.character-data {
@@ -152,12 +129,20 @@ div.rune-list {
     margin: 4px;
 }
 
+button {
+    color: var(--color-text);
+}
+
 button.previous {
     grid-area: previous;
+
+    background-color: transparent;
 }
 
 button.next {
     grid-area: next;
+
+    background-color: transparent;
 }
 
 div.button-row {
@@ -219,4 +204,10 @@ span.max-level {
 
 span.socket {
     grid-area: label-socket;
+}
+
+input[type="number"] {
+    border-image: var(--border-input);
+    border-image-width: auto;
+    border-style: solid;
 }
