[WIP] - Improved styling
- Character panel
- Checkbox
- Input field

--- a/src/RuneGlossary.Client.WASM/Components/Rune.razor
+++ b/src/RuneGlossary.Client.WASM/Components/Rune.razor
@@ -8,7 +8,7 @@
         <span class="statistic">Shield: @Model.InShield</span>
         <span class="statistic">Weapon: @Model.InWeapon</span>
     </div>
-    <div>
+    <div class="rune">
         <img src="assets/runes/@(Model.Name.ToLower()).webp"/>
         <span class="name">@Model.Name</span>
     </div>
