--- a/src/RuneGlossary.Client.WASM/Components/RuneWord.razor.css
+++ b/src/RuneGlossary.Client.WASM/Components/RuneWord.razor.css
@@ -18,6 +18,10 @@ div.runes {
     margin-bottom: 4px;
 }
 
+div.item-types {
+    max-width: 75%;
+}
+
 div.statistics {
     display: flex;
     flex-flow: column;
