--- a/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
+++ b/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
@@ -1,4 +1,5 @@
-﻿div.panel {
+﻿/* #region div */
+div.panel {
     border-image: var(--border-top);
     border-image-width: auto;
     border-image-slice: 30%;
@@ -10,10 +11,13 @@ div.main {
     grid-template-areas:
         'character filter'
         'character result';
-    grid-template-columns: 25% auto;
+    grid-template-columns: 24% auto;
     grid-template-rows: max-content 1fr;
     align-content: center;
     height: 100%;
+    width: 99%;
+
+    margin: auto;
 }
 
 div.character {
@@ -26,7 +30,7 @@ div.character {
     grid-template-rows: auto min-content min-content;
     grid-row-gap: var(--size-single);
     grid-area: character;
-    height: fit-content;
+    height: auto;
     padding: var(--size-double);
     border-style: solid;
 }
@@ -77,29 +81,11 @@ div.character-data {
     grid-area: data;
 }
 
-span.index {
-    grid-area: index;
-
-    justify-self: center;
-}
-
-img.class {
-    align-self: center;
-    justify-self: center;
-
-    grid-area: image;
-
-    width: 100%;
-}
-
 div.class {
     display: grid;
-
     grid-template-areas: 'previous image next';
     grid-template-columns: max-content auto max-content;
-
     grid-area: class;
-
     height: auto;
 }
 
@@ -117,36 +103,104 @@ div.character-information {
 div.rune-list {
     height: max-content;
     width: auto;
-
     column-count: 3;
-    
     grid-area: rune-list;
 }
 
-.selector {
+div.button-row {
+    grid-area: button-row;
+
     display: flex;
 
-    margin: 4px;
+    justify-content: space-between;
+}
+/*#endregion*/
+
+/*#region button*/
+button {
+    height: 2em;
+    width: 7.3em;
+
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    color: var(--color-text-button);
+
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: normal;
 }
 
-button {
-    color: var(--color-text);
+button:enabled {
+    background-image: var(--image-button-enabled);
+}
+
+button:disabled {
+    background-image: var(--image-button-disabled);
+}
+
+button:active {
+    transform: scale(0.98);
 }
 
 button.previous {
     grid-area: previous;
 
     background-color: transparent;
+    background-image: none;
+
+    width: auto;
+    height: 100%;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: normal;
 }
 
 button.next {
     grid-area: next;
 
     background-color: transparent;
+    background-image: none;
+
+    width: auto;
+    height: 100%;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: normal;
 }
 
-div.button-row {
-    grid-area: button-row;
+button.plus {
+    background-image: var(--image-button-plus);
+
+    height: 25px;
+    width: 25px;
+
+    border-width: 0px;
+}
+/*#endregion*/
+
+span.index {
+    grid-area: index;
+
+    justify-self: center;
+}
+
+img.class {
+    align-self: center;
+    justify-self: center;
+
+    grid-area: image;
+
+    width: 100%;
+}
+
+.selector {
+    display: flex;
+
+    margin: 4px;
 }
 
 form {
