Styleing character panel
- Added mouse wheel paging
- Set opacity for unavailable runes

--- a/src/RuneGlossary.Client.WASM/Components/Rune.razor.css
+++ b/src/RuneGlossary.Client.WASM/Components/Rune.razor.css
@@ -15,6 +15,10 @@ span {
     align-self: center;
 }
 
+div.unavailable {
+    opacity: 0.6;
+}
+
 .tooltip-wrapper {
     position: relative;
     display: inline-block;
