--- a/src/RuneGlossary.Client.WASM/Components/Rune.razor
+++ b/src/RuneGlossary.Client.WASM/Components/Rune.razor
@@ -8,7 +8,7 @@
         <span class="statistic">Shield: @Model.InShield</span>
         <span class="statistic">Weapon: @Model.InWeapon</span>
     </div>
-    <div class="rune">
+    <div class="rune @IsAvailable()">
         <img src="assets/runes/@(Model.Name.ToLower()).webp"/>
         <span class="name">@Model.Name</span>
     </div>
@@ -16,5 +16,15 @@
 
 @code {
     [Parameter]
+    public int? CharacterLevel { get; set; } = null!;
+
+    [Parameter]
     public Api.Rune Model { get; set; } = null!;
+
+    public string IsAvailable()
+    {
+        Console.WriteLine($"IsAvailable: {CharacterLevel} < {Model.Level}");
+        if (Model.Level <= CharacterLevel) return string.Empty;
+        return "unavailable";
+    }
 }
