--- a/src/RuneGlossary.Client.WASM/wwwroot/css/app.css
+++ b/src/RuneGlossary.Client.WASM/wwwroot/css/app.css
@@ -128,3 +128,16 @@ input[type=number]:valid {
     outline-width: 0px;
 }
 /*#endregion*/
+
+/*#region EditForm*/
+form {
+    display: inherit;
+
+    grid-template: inherit;
+    grid-template-areas: inherit;
+    grid-row-gap: inherit;
+    grid-column-gap: inherit;
+    grid-template-columns: inherit;
+    grid-template-rows: inherit;
+}
+/*#endregion*/
