Styled rune words

--- a/src/RuneGlossary.Client.WASM/Components/Rune.razor.css
+++ b/src/RuneGlossary.Client.WASM/Components/Rune.razor.css
@@ -1,12 +1,14 @@
 ﻿div {
     display: flex;
+
+    margin-left: var(--size-single);
 }
 
 img {
     height: 2em;
     width: 2em;
 
-    margin-right: 4px;
+    margin-right: var(--size-single);
 
     align-self: center;
 }
