--- a/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
+++ b/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
@@ -64,6 +64,8 @@ div.result {
     flex-flow: column;
     max-height: 807px;
     overflow: auto;
+
+    padding: var(--size-double);
 }
 
 div.character-data {
