--- a/src/RuneGlossary.Client.WASM/Components/Rune.razor
+++ b/src/RuneGlossary.Client.WASM/Components/Rune.razor
@@ -8,7 +8,7 @@
         <span class="statistic">Shield: @Model.InShield</span>
         <span class="statistic">Weapon: @Model.InWeapon</span>
     </div>
-    <div class="rune @IsAvailable()">
+    <div class="rune @GetClass()">
         <img src="assets/runes/@(Model.Name.ToLower()).webp"/>
         <span class="name">@Model.Name</span>
     </div>
@@ -16,15 +16,14 @@
 
 @code {
     [Parameter]
-    public int? CharacterLevel { get; set; } = null!;
+    public bool IsAvailable { get; set; }
 
     [Parameter]
     public Api.Rune Model { get; set; } = null!;
 
-    public string IsAvailable()
+    public string GetClass()
     {
-        Console.WriteLine($"IsAvailable: {CharacterLevel} < {Model.Level}");
-        if (Model.Level <= CharacterLevel) return string.Empty;
+        if (IsAvailable) return string.Empty;
         return "unavailable";
     }
 }
