Finished rune word styleing

--- a/src/RuneGlossary.Client.WASM/Components/RuneWord.razor
+++ b/src/RuneGlossary.Client.WASM/Components/RuneWord.razor
@@ -21,7 +21,7 @@
     <div class="statistics">
         @foreach (var statistic in Model.Statistics)
         {
-            <span class="statistic">@statistic.DisplayDescription()</span>
+            <RenderedStatistic Model="statistic" Level="CharacterLevel"/>
         }
     </div>
 
