--- a/src/RuneGlossary.Client.WASM/wwwroot/css/app.css
+++ b/src/RuneGlossary.Client.WASM/wwwroot/css/app.css
@@ -19,6 +19,7 @@
     --color-text-statistic: #7F78BE;
     --color-text-unavailable: #B16A6E;
     --color-text-incomplete: #868686;
+    --color-text-skill: #45C73E;
     --border-top: url('../assets/border.png');
     --image-input: url('../assets/input.png');
     --image-button-enabled: url('../assets/button-enabled.png');
