Modified style's of delete dialog

--- a/src/RuneGlossary.Client.WASM/App.razor
+++ b/src/RuneGlossary.Client.WASM/App.razor
@@ -1,4 +1,4 @@
-﻿<Blazored.Modal.CascadingBlazoredModal>
+﻿<Blazored.Modal.CascadingBlazoredModal Class="modal">
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
